--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tesla-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://hoangnym.github.io/tesla-clone",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -11,19 +12,24 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
+    "file-loader": "^6.2.0",
+    "gh-pages-deploy": "^0.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
