--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^4.0.0",
     "gh-pages-deploy": "^0.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
